<resources>
    <string name="app_name">ជួល</string>
    <string name="opened_menu">Opened</string>
    <string name="closed_menu">Closed</string>


    <string name="server_address">http://192.168.100.231:8000</string>

    <string name="house_type_promt">Choose House Type</string>
    <string-array name="house_type">
        <item>Bungalow</item>
        <item>Castle</item>
        <item>Caravan</item>
    </string-array>

    <string name="city_promt">Choose City</string>
    <string-array name="cities">
        <item>Siem Reap</item>
        <item>Phnom Penh</item>
        <item>Kampong Charm</item>
        <item>Banteay Meanchey</item>
        <item>Battambang</item>
        <item>Kampong Chhnang</item>
        <item>Kampong Speu</item>
        <item>Kampong Thom</item>
        <item>Kampot</item>
        <item>Kandal</item>
        <item>Koh Kong</item>
        <item>Kep</item>
        <item>Kratié</item>
        <item>Mondulkiri</item>
        <item>Oddar Meanchey</item>
        <item>Pailin</item>
        <item>Sihanoukville</item>
        <item>Preah Vihear</item>
        <item>Pursat</item>
        <item>Prey Veng</item>
        <item>Ratanakiri</item>
        <item>Stung Treng</item>
        <item>Svay Rieng</item>
        <item>Takéo</item>
        <item>Tbong Khmum</item>
    </string-array>

    <string name="currency_promt">Choose Currency</string>
    <string-array name="currencies">
        <item>Dollar</item>
        <item>Riel</item>
    </string-array>

    <string name="duration_promt">Choose Currency</string>
    <string-array name="duration">
        <item>15 </item>
        <item>30</item>
        <item>60</item>
    </string-array>

    <string name="sale_rent_promt">Choose Currency</string>
    <string-array name="for_sale_rent">
        <item>For Sale</item>
        <item>For Rent</item>
    </string-array>

    <string-array name="service_items">
        <item>Free Wifi</item>
        <item>Parking Space Available</item>
        <item>AC</item>
    </string-array>

</resources>
