<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"


    xmlns:tools="http://schemas.android.com/tools"

    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:background="#fff"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <!-- back btn-->
        <LinearLayout

            android:layout_marginTop="15dp"
            android:layout_marginBottom="15dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center_vertical">

            <ImageView
                android:layout_width="23dp"
                android:layout_height="23dp"
                android:src="@drawable/ic_keyboard_arrow_left_black_24dp"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Back"
                android:textColor="#000"/>
        </LinearLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Room Information"
            android:gravity="center"
            android:textSize="18sp"
            android:textColor="#000"/>

        <LinearLayout

            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingHorizontal="15dp"
            android:layout_marginTop="15dp"
            android:layout_marginBottom="15dp">

            <EditText
                android:id="@+id/title_et"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="Title"
                android:textSize="14sp"/>

            <EditText
                android:id="@+id/description_et"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="Description (Optional)"
                android:textSize="14sp"/>


            <EditText

                android:id="@+id/size_et"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="Room Size : eg 10m x 6m"
                android:textSize="14sp"/>

            <Button
                android:id="@+id/select_service_btn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Select Services Available"
                android:padding="5dp"
                android:textAlignment="textStart"
                android:background="@drawable/message_edit_text_shape"

                android:layout_marginBottom="10dp"
                android:textSize="12sp"
                android:textColor="#8D8D8D"
                android:drawableRight="@drawable/ic_keyboard_arrow_down_black_24dp"
                android:gravity="start"

                tools:ignore="RtlCompat" />


            <EditText
                android:id="@+id/phone_et"
                android:inputType="phone"


                android:layout_marginBottom="15dp"

                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="Phone Number #1"
                android:textSize="14sp"/>

            <EditText
                android:id="@+id/phone_opt_et"
                android:inputType="phone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="Phone Number #2 (Optional)"
                android:textSize="14sp"/>

            <EditText
                android:id="@+id/address_et"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="Address : eg Preah Monivong Blvd, Sangkat Srah Chork, Khan Daun Penh #6"
                android:textSize="14sp"/>


            <Spinner
                android:id="@+id/city_spinner"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:prompt="@string/city_promt"

                android:entries="@array/cities">
            </Spinner>


            <LinearLayout

                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Contact for Price"/>
                <Switch
                    android:layout_weight="1"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:theme="@style/SCBSwitch"/>
            </LinearLayout>




            <EditText
                android:layout_marginBottom="15dp"

                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="Price"
                android:textSize="14sp"/>

            <Spinner

                android:id="@+id/currency_spinner"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:prompt="@string/currency_promt"

                android:entries="@array/currencies">
            </Spinner>

            <Spinner
                android:id="@+id/duration_spinner"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:prompt="@string/duration_promt"
                android:entries="@array/duration">
            </Spinner>

            <!-- Image upload -->
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

            </RelativeLayout>

            <!--Google Map-->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"

                android:orientation="vertical">


                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="Location"/>



                <fragment
                    xmlns:android="http://schemas.android.com/apk/res/android"
                    xmlns:tools="http://schemas.android.com/tools"
                    android:layout_width="match_parent"
                    android:layout_height="150dp"
                    android:id="@+id/map"
                    tools:context=".MapsActivity"
                    android:name="com.google.android.gms.maps.SupportMapFragment" />


            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <CheckBox
                    android:textSize="14sp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Agree of Term &amp; Condition"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="#BC8E00"
                    android:textSize="11sp"
                    android:text="Read More"
                    android:layout_marginLeft="15dp"/>
            </LinearLayout>
            <LinearLayout
                android:layout_marginBottom="10dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <CheckBox
                    android:textSize="14sp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Agree of Private Policy"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="#BC8E00"
                    android:textSize="11sp"
                    android:text="Read More"
                    android:layout_marginLeft="15dp"/>
            </LinearLayout>

        </LinearLayout>

        <Button
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:background="#48C0E8"
            android:text="Save"
            android:textColor="#fff"/>
    </LinearLayout>

</ScrollView>